--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -28,7 +28,7 @@ logging.level.root=WARN
 management.endpoint.health.enabled=true
 management.endpoint.health.show-details=never
 management.endpoints.web.exposure.include=health
-management.health.probes.enabled=true
+management.endpoint.health.probes.enabled=true
 spring.security.oauth2.resourceserver.jwt.issuer-uri: https://localhost/auth/realms/onlineberatung
 spring.security.oauth2.resourceserver.jwt.jwk-set-uri: https://localhost/auth/realms/onlineberatung/protocol/openid-connect/certs
 spring.jwt.auth.converter.resource-id: app
